kubernetes/restaurant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-deployment
  labels:
    app: restaurant
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
      - name: restaurant
        image: cloud-native-foodordersystem-restaurant-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5003
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
