kubernetes/delivery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  labels:
    app: delivery
spec:
  selector:
    app: delivery
  ports:
  - port: 5002
    targetPort: 5002
    protocol: TCP
    name: http
  type: ClusterIP
