kubernetes/order-notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-notification-service
spec:
  selector:
    app: order-notification
  ports:
  - port: 5001
    targetPort: 5001
  type: ClusterIP
