kubernetes/restaurant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  selector:
    app: restaurant
  ports:
  - port: 5003
    targetPort: 5003
  type: ClusterIP
