kubernetes/delivery-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: delivery-network-policy
spec:
  podSelector:
    matchLabels:
      app: delivery
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ingress-nginx
    - podSelector:
        matchLabels:
          app: frontend
    - podSelector:
        matchLabels:
          app: order
    ports:
    - protocol: TCP
      port: 5002
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: order
    ports:
    - protocol: TCP
      port: 5001
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
